--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link id="theme-style" href="/styles.css" rel="stylesheet" />
+    <link id="theme-style" href="static/styles.css" rel="stylesheet" />
   </head>
   <body>
     <header>
@@ -35,5 +35,5 @@
       </div>
     </div>
   </body>
-  <script type="module" src="./index.js"></script>
+  <script type="module" src="./static/index.js"></script>
 </html>
