--- a/static/index.html
+++ b/static/index.html
@@ -22,11 +22,11 @@
     </div>
     <div class="table row">
       <div class="col">
-        <span>Iterate Async Array 1</span>
+        <span>Iterate Array 1</span>
         <ul class="col" id="left-col"></ul>
       </div>
       <div class="col">
-        <span>Iterate Async Array 2</span>
+        <span>Iterate Array 2</span>
         <ul class="col" id="right-col"></ul>
       </div>
       <div class="col">
